# communication_bluetooth

./: 1  OAT.xml  README.en.md  README.md  README_zh.md  bluetooth.gni  bundle.json  gitlog.txt  hisysevent.yaml  ohos.build
bluetooth_ui/: BUILD.gn  publicity.xml
bluetooth_ui/AppScope/: app.json
bluetooth_ui/entry/src/main/: module.json
bluetooth_ui/signature/: bluetooth.gni  bluetooth.p7b
frameworks/c_api/: BUILD.gn  libbluetooth.ndk.json
frameworks/c_api/src/: oh_bluetooth.cpp
frameworks/cj/a2dp/: BUILD.gn
frameworks/cj/a2dp/include/: bluetooth_a2dp_ffi.h  bluetooth_a2dp_impl.h  bluetooth_a2dp_observer_impl.h  bluetooth_a2dp_utils.h
frameworks/cj/a2dp/src/: bluetooth_a2dp_ffi.cpp  bluetooth_a2dp_impl.cpp  bluetooth_a2dp_observer_impl.cpp  bluetooth_a2dp_utils.cpp
frameworks/cj/connection/: BUILD.gn
frameworks/cj/connection/include/: bluetooth_connection_common.h  bluetooth_connection_ffi.h  bluetooth_connection_impl.h  bluetooth_connection_util.h
frameworks/cj/connection/src/: bluetooth_connection_callback.cpp  bluetooth_connection_common.cpp  bluetooth_connection_ffi.cpp  bluetooth_connection_impl.cpp
frameworks/cj/hid/: BUILD.gn
frameworks/cj/hid/include/: bluetooth_hid_host_ffi.h  bluetooth_hid_host_impl.h  bluetooth_hid_host_observer_impl.h  bluetooth_hid_host_utils.h
frameworks/cj/hid/src/: bluetooth_hid_host_ffi.cpp  bluetooth_hid_host_impl.cpp  bluetooth_hid_host_observer_impl.cpp  bluetooth_hid_host_utils.cpp
frameworks/ets/taihe/bluetooth_ble/: BUILD.gn
frameworks/ets/taihe/bluetooth_connection/: BUILD.gn
frameworks/ets/taihe/bluetooth_hid/: BUILD.gn
frameworks/inner/: BUILD.gn  ipc_blocklist.txt
frameworks/inner/c_adapter/: ohos_bt_adapter_utils.cpp  ohos_bt_adapter_utils.h  ohos_bt_gap.cpp  ohos_bt_gatt.cpp  ohos_bt_gatt_client.cpp  ohos_bt_gatt_server.cpp  ohos_bt_gatt_utils.cpp  ohos_bt_socket.cpp  ohos_bt_spp.cpp
frameworks/inner/common/: bluetooth_errorcode.h  bluetooth_log.h
frameworks/inner/include/: bluetooth_host_load_callback.h  bluetooth_load_system_ability.h  bluetooth_log.h  bluetooth_object_map.h  bluetooth_observer_list.h  bluetooth_observer_map.h  bluetooth_profile_manager.h
frameworks/inner/ipc/common/: a2dp_parcel_codec.h  avrcp_media.h  ble_parcel_data.cpp  ble_parcel_data.h  ble_service_data.cpp  ble_service_data.h  bluetooth_errorcode.h  bluetooth_hid_device_info.h  bt_battery_info.h  bt_def.h  bt_oob_data.cpp  bt_oob_data.h  bt_sensing_info.h  bt_trust_pair_device.cpp  bt_trust_pair_device.h  bt_uuid.cpp  bt_uuid.h  gatt_data.h  hid_device_data.h  hid_device_utils.cpp  hid_device_utils.h  log.h  map_mce_parameter.h  opp_transfer_information.cpp  opp_transfer_information.h  raw_address.h
frameworks/inner/ipc/include/: bluetooth_a2dp_sink_observer_stub.h  bluetooth_a2dp_src_observer_stub.h  bluetooth_a2dp_src_proxy.h  bluetooth_audio_manager_proxy.h  bluetooth_avrcp_ct_observer_stub.h  bluetooth_avrcp_ct_proxy.h  bluetooth_avrcp_tg_observer_stub.h  bluetooth_avrcp_tg_proxy.h  bluetooth_bas_proxy.h  bluetooth_ble_advertise_callback_stub.h  bluetooth_ble_advertiser_proxy.h  bluetooth_ble_central_manager_callback_stub.h  bluetooth_ble_central_manager_proxy.h  bluetooth_ble_peripheral_observer_stub.h  bluetooth_device_battery_observer_stub.h  bluetooth_gatt_client_callback_stub.h  bluetooth_gatt_client_proxy.h  bluetooth_gatt_server_callback_stub.h  bluetooth_gatt_server_proxy.h  bluetooth_hfp_ag_observer_stub.h  bluetooth_hfp_ag_proxy.h  bluetooth_hfp_hf_observer_stub.h  bluetooth_hfp_hf_proxy.h  bluetooth_hid_device_observer_stub.h  bluetooth_hid_device_proxy.h  bluetooth_hid_host_proxy.h  bluetooth_host_observer_stub.h  bluetooth_host_proxy.h  bluetooth_map_mce_observer_stub.h  bluetooth_map_mse_observer_stub.h  bluetooth_map_mse_proxy.h  bluetooth_oob_observer_stub.h  bluetooth_opp_observer_stub.h  bluetooth_opp_proxy.h  bluetooth_pan_proxy.h  bluetooth_pbap_pce_observer_stub.h  bluetooth_pbap_pse_observer_stub.h  bluetooth_pbap_pse_proxy.h  bluetooth_remote_device_observer_stub.h  bluetooth_resource_manager_observer_stub.h  (+2 more)
frameworks/inner/ipc/interface/: bluetooth_service_ipc_interface_code.h  bluetooth_service_profile_interface_code.h  i_bluetooth_a2dp_sink.h  (+46 more)
frameworks/inner/src/: bluetooth_a2dp_snk.cpp  bluetooth_a2dp_src.cpp  bluetooth_address_info.cpp  bluetooth_audio_manager.cpp  bluetooth_avrcp_ct.cpp  bluetooth_avrcp_tg.cpp  bluetooth_bas_host.cpp  bluetooth_ble_advertiser.cpp  bluetooth_ble_central_manager.cpp  bluetooth_device_class.cpp  bluetooth_gatt_characteristic.cpp  bluetooth_gatt_client.cpp  bluetooth_gatt_descriptor.cpp  bluetooth_gatt_manager.cpp  bluetooth_gatt_server.cpp  bluetooth_gatt_service.cpp  bluetooth_hfp_ag.cpp  bluetooth_hfp_hf.cpp  bluetooth_hid_device.cpp  bluetooth_hid_host.cpp  bluetooth_host.cpp  bluetooth_host_load_callback.cpp  bluetooth_load_system_ability.cpp  bluetooth_map_mce.cpp  bluetooth_map_mse.cpp  bluetooth_oob_data.cpp  bluetooth_opp.cpp  bluetooth_pan.cpp  bluetooth_pbap_pce.cpp  bluetooth_pbap_pse.cpp  bluetooth_profile_manager.cpp  bluetooth_proxy_manager.cpp  bluetooth_remote_device.cpp  bluetooth_socket.cpp  bluetooth_socket_inputstream.cpp  bluetooth_socket_outputstream.cpp  bluetooth_switch_module.cpp  bluetooth_switch_module.h  bluetooth_timer.cpp  bluetooth_utils.cpp  (+1 more)
frameworks/js/napi/: BUILD.gn  js_napi_blocklist.txt
interfaces/kits/napi/: BUILD.gn
services/bluetooth/hardware/: BUILD.gn
services/bluetooth/ipc/: BUILD.gn  ipc_blocklist.txt
services/bluetooth/server/: BUILD.gn
services/bluetooth_standard/hardware/: BUILD.gn
services/bluetooth_standard/ipc/: BUILD.gn
services/bluetooth_standard/server/: BUILD.gn
services/bluetooth_standard/service/: BUILD.gn
test/unittest/avrcp/: BUILD.gn
test/unittest/napi/: BUILD.gn  napi_event_subscribe_module_test.cpp  uv.h
tools/ohos-bluetoothTool/: BUILD.gn  README.md  ohos-bluetoothTool.json
tools/ohos-bluetoothTool/docs/: README.md
tools/ohos-bluetoothTool/src/: bluetooth_tool.cpp  bluetooth_tool.h  command_executor.cpp  command_executor.h  main.cpp  utils.cpp  utils.h
(+2729 files in other folders)
