# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  bluetooth_a2dp_sink_feature = false
  bluetooth_a2dp_source_feature = true
  bluetooth_avrcp_ct_feature = true
  bluetooth_avrcp_tg_feature = false
  bluetooth_hfp_ag_feature = true
  bluetooth_hfp_hf_feature = false
  bluetooth_hid_host_feature = true
  bluetooth_pan_feature = true
  bluetooth_pbap_client_feature = false
  bluetooth_pbap_server_feature = false
  bluetooth_opp_feature = true
  bluetooth_map_client_feature = false
  bluetooth_map_server_feature = false
}
