# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./signature/bluetooth.gni")

ohos_hap("bluetooth_hap") {
  hap_profile = "entry/src/main/module.json"

  deps = [
    ":bluetooth_js_assets",
    ":bluetooth_resources",
  ]

  publicity_file = "publicity.xml"
  certificate_profile = "signature/bluetooth.p7b"
  hap_name = "Bluetooth"
  subsystem_name = "bluetooth"
  part_name = "bluetooth"
  module_install_dir = "app/Bluetooth"
  if (defined(sign_hap_py_path)) {
    certificate_profile = "${certificate_profile_path}"
    key_alias = "Bluetooth Release"
    private_key_path = "Bluetooth Release"
    compatible_version = "26"
  }
}

ohos_js_assets("bluetooth_js_assets") {
  hap_profile = "entry/src/main/module.json"
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_app_scope("bluetooth_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_resources("bluetooth_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":bluetooth_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}

group("hap") {
  deps = [ ":bluetooth_hap" ]
}
