# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//foundation/communication"
BLUETOOTH_FRAMEWORK_DIR = "$SUBSYSTEM_DIR/bluetooth/frameworks"

ohos_ndk_headers("bluetooth_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/bluetooth"
  sources =
      [ "$SUBSYSTEM_DIR/bluetooth/interfaces/c_api/include/oh_bluetooth.h" ]
}

ohos_ndk_library("libbluetooth_ndk") {
  ndk_description_file = "$BLUETOOTH_FRAMEWORK_DIR/c_api/libbluetooth.ndk.json"
  output_name = "bluetooth_ndk"
  output_extension = "so"
  min_compact_version = "13"
}

config("bluetooth_ndk_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$SUBSYSTEM_DIR/bluetooth/interfaces/c_api/include",
    "$BLUETOOTH_FRAMEWORK_DIR/inner/include",
  ]
}

ohos_shared_library("bluetooth_ndk") {
  sources = [ "$BLUETOOTH_FRAMEWORK_DIR/c_api/src/oh_bluetooth.cpp" ]
  output_extension = "so"
  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]

  configs = [ ":bluetooth_ndk_config" ]

  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  deps = [ "$BLUETOOTH_FRAMEWORK_DIR/inner:btframework" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  relative_install_dir = "ndk"
  part_name = "bluetooth"
  subsystem_name = "communication"
}
