# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")

ohos_cli_executable("ohos-bluetoothTool") {
  cli_config_file = "ohos-bluetoothTool.json"

  sources = [
    "src/main.cpp",
    "src/bluetooth_tool.cpp",
    "src/command_executor.cpp",
    "src/utils.cpp",
  ]

  include_dirs = [
    "//foundation/communication/bluetooth/interfaces/inner_api/include",
    "//foundation/communication/bluetooth/frameworks/inner/ipc/common",
  ]

  cflags = [
    "-DBINDER_IPC_32BIT",
  ]

  deps = [
    "//foundation/communication/bluetooth/frameworks/inner:btframework",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  install_enable = true
  install_images = ["system"]
  relative_install_dir = "cli_tool/executable"

  subsystem_name = "communication"
  part_name = "bluetooth"
}